--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--Hello World, Just a comment -->
 <html ng-app="contestApp">
 
 <head>
@@ -39,13 +40,13 @@
                              </span>
                     </div>
                     <div class="logo-element">
-                        
+
                     </div>
 
                 </li>
                 <li ng-repeat="(iKey,iData) in menuItems" ng-class="{active:curItem == iKey}">
                     <a href="{{ iData.route }}" ng-click="setItem(iKey)"><i class="{{ iData.icon }}"></i> <span class="nav-label">{{ iData.name }}</span></a>
-                </li>   
+                </li>
             </ul>
 
         </div>
